fixed some of the overflow bugs in the footer! :+1:
This is looks way better then what I had committed 2 to 3 days ago. :+1:

--- a/style.css
+++ b/style.css
@@ -5,10 +5,16 @@
 p {
 	font-family: Arial;
 	font-size: 20px;
-	padding: 10%;
+	padding: 2rem;
 	color: white;
+	border: 3px solid #fff;
 }
 
+/*
+div {
+  overflow: scroll;
+}
+*/
 
 img {
 	display: block;
@@ -22,7 +28,6 @@ img {
 
 
 video {
-	display: block;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 30px;
@@ -40,8 +45,19 @@ video {
 
 
 h3 {
-	font-size: 20px;
+	display: block;
+	font-size: 1rem;
+	font-family: Arial;
+	position: relative;
 	color: white;
+	transform: translate(-50%, 100%);
+	top: 50%;
+	left: 50%;
+
+	padding: 3rem 6rem;
+	width: 50%;
+	height: 50%;
+	text-align: center;
 }
 
 
@@ -49,10 +65,11 @@ html {
 	font-size: 10px;
 	font-family: "Lato", Arial, sans-serif;
 	text-align: center;
-	background-color: gray;
+	background-color: #404040;
 }
 
 section {
+	display: block;
 	margin: auto;
 	width: 100%;
 	height: 100vh;
@@ -83,10 +100,11 @@ section {
 
 
 #Profile_Img {
+	display: block;
 	border-radius: 50%;
 }
 
-.Profile_Img {			/* This is a CLASS!!! recall the '.'  */
+.Profile_Img {			/* This is a CLASS!!! recall the '.' dot */
 	margin: auto;
 	width: 60%;
 	padding: 10px;
@@ -94,6 +112,7 @@ section {
 
 
 #Main_Heading{
+	display: block;
 	font-size: 5rem;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -106,6 +125,7 @@ section {
 }
 
 #About_Heading {
+	display: block;
 	font-size: 3rem;
 	text-transform: uppercase;
 	letter-spacing: 3px;
@@ -114,12 +134,13 @@ section {
 	color: white;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, 20%);
 	padding: 3rem 6rem;
 	width: 50%;
 }
 
 #Project_Heading {
+	display: block;
 	font-size: 3rem;
 	text-transform: uppercase;
 	letter-spacing: 3px;
@@ -128,13 +149,14 @@ section {
 	color: white;
 	top: 50%; 
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, 20%);
 	padding: 3rem 6rem;
 	width: 50%;
 }
 
 
 #Interest_Heading {
+	display: block;
 	font-size: 3rem;
 	text-transform: uppercase;
 	letter-spacing: 3px;
@@ -143,22 +165,43 @@ section {
 	color: white;
 	top: 50%; 
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -10%);
 	padding: 3rem 6rem;
 	width: 50%;
+	text-align: center;
 }
 
 
 #Contact {
+	display: block;
 	font-size: 2rem;
 	letter-spacing: 3px;
 	border: 2px solid #fff;
 	position: relative;
 	color: white;
+	transform: translate(-50%, 30%);
 	top: 50%; 
 	left: 50%;
-	transform: translate(-50%, -50%);
-	padding: 2rem 4rem;
+	
+	padding: 3rem 6rem;
 	width: 50%;
+	height: 50%;
+	text-align: center;
 }
 
+#footer {
+	display: block;
+	font-size: 1rem;
+	font-family: Arial;
+	position: relative;
+	color: white;
+	transform: translate(-50%, 100%);
+	top: 50%;
+	left: 50%;
+
+	padding: 3rem 6rem;
+	width: 50%;
+	height: 50%;
+	text-align: center;
+
+}
